sabnzbd/sabnzbd-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: sabnzbd/sabnzbd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: sabnzbd
          mountPath: /datadir
        - name: sabnzbd-downloads
          mountPath: /downloads
      volumes:
      - cephfs:
          monitors:
          - 192.168.86.45:6789
          path: /sabnzbd
          secretRef:
            name: ceph-admin-secret
          user: admin
        name: sabnzbd
      - cephfs:
          monitors:
          - 192.168.86.45:6789
          path: /sabnzbd/downloads
          secretRef:
            name: ceph-admin-secret
          user: admin
        name: sabnzbd-downloads
