sabnzbd/sabnzbd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sabnzbd
spec:
  rules:
  - host: sabnzbd.local.parlette.us
    http:
      paths:
      - path: /
        backend:
          serviceName: sabnzbd
          servicePort: 80
